[workspace]
resolver        = "3"
default-members = [ "breachops" ]
members         = [
    "breachops",
    "breachops-utils",
]

[workspace.package]
authors     = [
    "skyeBreach <skyebreach@proton.me>"
]
categories = ["command-line-utilities"]
repository = "https://github.com/skyeBreach/breachops"
homepage = "https://github.com/skyeBreach/breachops"
license-file = "LICENSE"
